customized layout with branded fonts, colors and background image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Lora|Source+Sans+Pro:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
     </head>
     <body>
@@ -25,10 +25,10 @@
         
         <section class="wrapper">
             <div class="content">
-                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience.</p>
+                <p>I am a <span>Responsive Designer & Developer</span> who thrives on visual storytelling and the best user experience. </p>
             </div>
             <div class="content">
-                When I'm not working, pursuing side projects or getting lost in the rabbit hole of blogs and books, I can be found traveling, hiking and searching for new stories.</p>
+               <p>When I'm not working or pursuing side projects, I can be found traveling, taking a new course or having a chai with a friend.</p>
             </div>
 
         </section>    
